fix portfolio rows on mobile

--- a/packages/augur-ui/src/modules/portfolio/components/common/expanded-content.styles.less
+++ b/packages/augur-ui/src/modules/portfolio/components/common/expanded-content.styles.less
@@ -114,12 +114,10 @@
       }
 
       &.Single {
-        border: 1px solid @color-dark-grey;
         border-radius: @border-radius-default;
         border-top: 0;
         border-top-left-radius: 0;
         border-top-right-radius: 0;
-        padding-left: @size-16;
       }
     }
   }
