--- a/packages/augur-ui/src/modules/portfolio/components/common/filled-orders-table.styles.less
+++ b/packages/augur-ui/src/modules/portfolio/components/common/filled-orders-table.styles.less
@@ -96,7 +96,6 @@
       padding: 0 @size-16;
 
       > div {
-        border-top: 1px solid @color-dark-grey;
         display: block;
         padding-bottom: @size-10;
         padding-top: @size-10;
